--- a/css/styles.css
+++ b/css/styles.css
@@ -695,3 +695,36 @@ address {
 .social-networks-svg-footer {
     fill: var(--color-studio-footer);
 }
+
+/*
+|==========================================|
+|========BACKDROP WITH MODAL WINDOW========|
+|==========================================|
+*/
+/*|========BACKDROP========|*/
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999999999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.40);
+}
+
+/*|========MODAL-WINDOW========|*/
+.modal-window {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 24px;
+    padding-top: 72px;
+    border-radius: 4px;
+    background-color: #FCFCFC;
+
+}
