--- a/css/styles.css
+++ b/css/styles.css
@@ -707,6 +707,16 @@ address {
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.40);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms linear, visibility 250ms linear;
+}
+/*імітація роботи модального вікна*/
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 /*|========MODAL-WINDOW========|*/
@@ -724,15 +734,26 @@ address {
     border-radius: 4px;
     background-color: #FCFCFC;
 }
+/*|========CLOSE BUTTON========|*/
 .btn-close-window {
     /*
+    line-height: 0;
     background-color: transparent;
     border: none;
     padding: 0;
     */
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    fill: var(--color-studio-header);
+    
+}
+.btn-close-window:hover,
+.btn-close-window:focus {
+    fill: var(--header-a-active-cl);
 }
 
 .close-icon {
-    stroke: var(--color-studio-header);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
