--- a/css/styles.css
+++ b/css/styles.css
@@ -356,6 +356,7 @@ address {
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
+    margin: auto;
 }    
 
 .hero-container {
@@ -474,6 +475,7 @@ address {
 
 .section-team-category {
     text-align: center;
+    margin-bottom: 8px;
 }
 
 .text-container {}
@@ -577,7 +579,7 @@ address {
     /*для контролю переповнення контенту*/
     overflow: auto;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .ideas-item:hover .overlay, 
@@ -754,6 +756,121 @@ address {
 }
 
 .close-icon {
+    fill: var(--color-studio-header);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/*|========FEEDBACK========|*/
+.feedback {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-studio-header);
+    width: 360px;
+    margin-bottom: 16px;
+}
+/*|========INPUT/REVIEW-FORM/форма для введення========|*/
+.review-form {}
+
+.review-form-box {
+    margin-bottom: 8px;
+}
+
+.review-form-label {
+    display: block;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+        /* 116.667% */
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    margin-bottom: 4px;
+}
+
+.review-form-positioning-box{
+    position: relative;
+}
+
+.review-form-input {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    padding-left: 32px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/*|========FOCUS/зміна кольору INPUT========|*/
+.review-form-input:focus {
+    border-color: var(--portfolio-filter-btn-cl);
+    outline: transparent;
+}
+/*|========FOCUS/зміна кольору іконкиSVG========|*/
+/*
++ : працює тільки коли перший сусід зліва;
+~ : працює не залежно від сусідів;
+*/
+.review-form-input:focus ~ .review-form-icon {
+    fill: var(--portfolio-filter-btn-cl);
+}
+
+
+.review-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: var(--color-studio-header);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/*|========TEXTAREA========|*/
+.review-form-comment {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+        /* 116.667% */
+    letter-spacing: 0.04em;
+    color: var(--color-studio-header);
+    width: 100%;
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px; 
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/*|========PLACEHOLDER/зміна кольору========|*/
+.review-form-comment::placeholder {
+    color: var(--color-studio-header);
+}
+
+/*|========FOCUS/зміна кольору TEXTAREA========|*/
+.review-form-comment:focus {
+    border-color: var(--portfolio-filter-btn-cl);
+    outline: transparent;
+}
+
+
+/*|========CHECKBOX========|*/
+.review-form-checkbox-box {}
+
+.review-form-checkbox {}
+
+.review-form-checkdox-label {}
+
+.review-form-checkbox-span {}
+
+.review-form-checkbox-link {}
+
+/*|========BUTTON========|*/
+.review-form-submit {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+        /* 150% */
+    letter-spacing: 0.64px;
+}
