--- a/css/styles.css
+++ b/css/styles.css
@@ -747,7 +747,10 @@ address {
     position: absolute;
     top: 24px;
     right: 24px;
-    fill: var(--color-studio-header);
+    fill: #E7E9FC;
+    border-radius: 4px;
+    background-color: #E7E9FC;
+    border: none;
     
 }
 .btn-close-window:hover,
@@ -769,12 +772,13 @@ address {
     color: var(--color-studio-header);
     width: 360px;
     margin-bottom: 16px;
+    text-align: center;
 }
 /*|========INPUT/REVIEW-FORM/форма для введення========|*/
 .review-form {}
 
 .review-form-box {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .review-form-label {
@@ -826,6 +830,7 @@ address {
 
 /*|========TEXTAREA========|*/
 .review-form-comment {
+    display: block;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
@@ -902,9 +907,25 @@ address {
 
 /*|========BUTTON========|*/
 .review-form-submit {
+    display: inline-flex;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
         /* 150% */
-    letter-spacing: 0.64px;
+    letter-spacing: 0.04em;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 4px;
+    background-color: var(--color-web);
+    box-shadow: 0px 4px 4px 0px 
+    rgba(0, 0, 0, 0.15);
+    text-align: center;
+    color: #FFF;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
