--- a/css/styles.css
+++ b/css/styles.css
@@ -712,7 +712,8 @@ address {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: opacity 250ms linear, visibility 250ms linear;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*імітація роботи модального вікна*/
 .backdrop.is-open {
@@ -768,6 +769,7 @@ address {
 .btn-close-window:focus {
     fill: var(--header-a-active-cl);
     background-color: #404bbf;
+    border: none;
 }
 
 .close-icon {
@@ -790,7 +792,7 @@ address {
 .review-form {}
 
 .review-form-box {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .review-form-label {
