--- a/css/styles.css
+++ b/css/styles.css
@@ -919,7 +919,7 @@ address {
    background-color: var(--header-a-active-cl);
    stroke: var(--color-studio-footer);
    border: none
-   fill:var(--color-studio-footer);
+   fill var(--color-studio-footer);
 }
 /*|========імітація роботи про FOCUS/CHECKBOX========|*/
 .review-form-checkbox:focus
