--- a/css/styles.css
+++ b/css/styles.css
@@ -695,6 +695,52 @@ address {
     fill: var(--color-studio-footer);
 }
 
+/* ========SYBSCRIBE======= */
+.sybscribe-footer-box {}
+
+.text-sybscribe {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+        /* 150% */
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    color: #FFF;
+
+}
+.sybscribe-footer-form {
+    display: flex;
+    gap: 24px;
+}
+.subscribe-footer-label {}
+
+.sybscribe-footer-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: #ffffff;
+
+}
+/*|========PLACEHOLDER/зміна кольору========|*/
+.sybscribe-footer-input::placeholder {
+    color: #ffffff;
+}
+
+
+
+
+
+
+
+
+
 /*
 |==========================================|
 |========BACKDROP WITH MODAL WINDOW========|
@@ -961,6 +1007,4 @@ address {
     margin-left: auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
 
