--- a/css/styles.css
+++ b/css/styles.css
@@ -732,9 +732,23 @@ address {
 .sybscribe-footer-input::placeholder {
     color: #ffffff;
 }
-
-
-
+.btn-sybscribe-footer {
+    display: flex;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+        /* 150% */
+    letter-spacing: 0.04em;
+    min-width: 165px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: var(--color-web);
+    border: none;
+    border-radius: 4px;
+}
 
 
 
