sybscribe/footer/btn/off

--- a/css/styles.css
+++ b/css/styles.css
@@ -748,8 +748,13 @@ address {
     background-color: var(--color-web);
     border: none;
     border-radius: 4px;
+    color: #FFFFFF;
 }
 .btn-sybscribe-footer-span {}
+
+.btn-sybscribe-footer-icon {
+    margin-left: 16px;
+}
 
 
 
