backdrop/modal/коментар

--- a/css/styles.css
+++ b/css/styles.css
@@ -902,6 +902,7 @@ address {
 }
 /*|========FOCUS/зміна кольору іконкиSVG========|*/
 /*
+використав селектор сусіда
 + : працює тільки коли перший сусід зліва;
 ~ : працює не залежно від сусідів;
 */
